Remove superfluous path

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
 <% if (webpackConfig.metadata.ENV === "development") { %>
 <!-- Webpack Dev Server reload -->
 <script
-    src="http://<%- webpackConfig.metadata.host %>:<%- webpackConfig.metadata.port %>/webpack-dev-server.js"></script>
+    src="/webpack-dev-server.js"></script>
 <% } %>
 
 <!-- Generated bundle scripts will be injected by webpack: html-webpack-plugin -->
