Added note about base tag

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
     <!-- Generated CSS stylesheets will be added by webpack: extract-text-webpack-plugin -->
 
     <!-- base url -->
+    <!-- all relative URLs will use this as base URL: https://developer.mozilla.org/en/docs/Web/HTML/Element/base -->
     <base href="<%- webpackConfig.metadata.baseUrl %>">
 </head>
 <body>
