Enabled HTML5 mode (closes #89)

--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,7 @@
 
     <!-- base url -->
     <!-- all relative URLs will use this as base URL: https://developer.mozilla.org/en/docs/Web/HTML/Element/base -->
+    <!-- necessary for HTML5 History API which adds support for pretty URLs (see app.ts) -->
     <base href="<%- webpackConfig.metadata.baseUrl %>">
 </head>
 <body>
